[package]
name = "postsmith"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
reqwest = "0.12.4"
tokio = { version = "1", features = ["full"] }
tui-input = "0.8.0"
tui-scrollview = "0.3.6"
ratatui = "0.26.3"
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"